[tool.poetry]
name = "api"
version = "0.1.0"
description = ""
authors = ["luqmancode <luqmandepy@gmail.com>"]
readme = "README.md"
packages = [{include = "api", from = "src"}]

[tool.poetry.scripts]
start = "api:run"

[tool.poetry.dependencies]
python = "^3.10"
quart = {extras = ["dotenv"], version = "^0.19.5"}
quart-schema = "^0.19.1"


[tool.poetry.group.dev.dependencies]
pytest-asyncio = "^0.23.6"


[tool.pytest.ini_options]
asyncio_mode = "auto"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
